--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-html,body {
+html,
+body {
   width: 100%;
   height: 100%;
-  
 }
 
 body {
@@ -13,5 +13,5 @@ body {
   justify-content: center;
   align-items: center;
 
-  background-color: rgb(91, 91, 103);
+  background-color: #233142;
 }
